@@ -5,21 +5,22 @@ import static org.lwjgl.opengl.GL11.*;
 
 /**
  * Contains methods to draw simple 2D shapes using OpenGL primitives.
- * These methods only contain the actual drawing code, and assumes all OpenGL
+ * These methods only contain the actual drawing code and assumes all OpenGL
  * flags, color, line width etc have been set by the user beforehand.
  *
  * @author LazyWizard
  * @since 1.7
  */
-// TODO: Swap to glDrawArrays() for faster/more efficient drawing
 public class DrawUtils
 {
     /**
-     * Draws a simple circle made of line segments. This method only contains
-     * the actual drawing code and assumes all OpenGL flags, color, line width
-     * etc have been set by the user beforehand. Due to the way this works,
-     * this can be used to make any regular polygon with a number of sides equal
-     * to {@code numSegments}.
+     * Draws a simple circle made of line segments, or a filled circle if
+     * {@code drawFilled} is true.
+     * <p>
+     * This method only contains the actual drawing code and assumes all OpenGL
+     * flags, color, line width etc have been set by the user beforehand. Due
+     * to the way this works, this can be used to make any regular polygon
+     * with a number of sides equal to {@code numSegments}.
      * <p>
      * Optimized circle-drawing algorithm based on code taken from:
      * <a href=http://slabode.exofire.net/circle_draw.shtml>
@@ -31,13 +32,18 @@ public class DrawUtils
      * @param numSegments How many line segments the circle should be made up
      *                    of (higher number = smoother circle, but higher GPU
      *                    cost).
-     * @param isFilled    Whether the circle should be hollow or filled.
+     * @param drawFilled  Whether the circle should be hollow or filled.
      * <p>
      * @since 1.7
      */
     public static void drawCircle(float centerX, float centerY,
-            float radius, int numSegments, boolean isFilled)
+            float radius, int numSegments, boolean drawFilled)
     {
+        if (numSegments < 3)
+        {
+            return;
+        }
+
         // Precalculate the sine and cosine
         // Instead of recalculating sin/cos for each line segment,
         // this algorithm rotates the line around the center point
@@ -50,7 +56,7 @@ public class DrawUtils
         float x = radius;
         float y = 0;
 
-        glBegin(isFilled ? GL_TRIANGLE_FAN : GL_LINE_LOOP);
+        glBegin(drawFilled ? GL_TRIANGLE_FAN : GL_LINE_LOOP);
         for (int i = 0; i < numSegments; i++)
         {
             // Output vertex
@@ -71,11 +77,13 @@ public class DrawUtils
     }
 
     /**
-     * Draws an arc made up of line segments. This method only contains
-     * the actual drawing code and assumes all OpenGL flags, color, line width
-     * etc have been set by the user beforehand. Due to the way this works,
-     * this can be used to make any regular polygon with a number of sides equal
-     * to {@code numSegments} if {@code arcAngle} is set to 360.
+     * Draws an arc made up of line segments.
+     * <p>
+     * This method only contains the actual drawing code and assumes all OpenGL
+     * flags, color, line width etc have been set by the user beforehand. Due
+     * to the way this works, this can be used to make any regular polygon
+     * with a number of sides equal to {@code numSegments} if {@code arcAngle}
+     * is set to 360.
      * <p>
      * Optimized arc-drawing algorithm based on code taken from:
      * <a href=http://slabode.exofire.net/circle_draw.shtml>
